# comm_network

./: .gitignore  CMakeLists.txt  README.md
cmake/: comm_network.cmake  proto2cpp.cmake  python.cmake
comm_network/: .ibverbs_comm_network.cpp.swp  channel.h  comm_network.cpp  comm_network.h  comm_network_config.proto  comm_network_config_desc.cpp  comm_network_config_desc.h  comm_network_init.h  comm_network_internal.h  env.proto  env_desc.cpp  env_desc.h  global.h  ibverbs.proto  ibverbs_comm_network.cpp  ibverbs_comm_network.h  ibverbs_helper.cpp  ibverbs_helper.h  ibverbs_memory_desc.cpp  ibverbs_memory_desc.h  ibverbs_poller.cpp  ibverbs_poller.h  ibverbs_qp.cpp  ibverbs_qp.h  ibverbs_read_helper.cpp  ibverbs_read_helper.h  ibverbs_write_helper.cpp  ibverbs_write_helper.h  message.h  msg_bus.cpp  msg_bus.h  utils.h
comm_network/common/: blocking_counter.h  channel.h  cplusplus_14.h  function_traits.h  global.h  preprocessor.h  preprocessor_internal.h  utils.h
comm_network/control/: .ctrl_client.cpp.swp  .ctrl_client.h.swp  .ctrl_server.cpp.swp  control.proto  ctrl_call.h  ctrl_client.cpp  ctrl_client.h  ctrl_server.cpp  ctrl_server.h  ctrl_service.cpp  ctrl_service.h
comm_network/epoll/: epoll_comm_network.h
comm_network/ibverbs/: ibverbs.proto  ibverbs_comm_network.cpp  ibverbs_comm_network.h  ibverbs_helper.cpp  ibverbs_helper.h  ibverbs_memory_desc.cpp  (+9 more)
test/: .test_comm_network.cpp.swp  CMakeLists.txt  env_config.in  machine0.cpp  machine1.cpp  machine2.cpp  test_3_machines.cpp  test_comm_network.cpp  test_correctness.cpp  test_throughput.cpp
